Fix BOM to "Buy Parts" spacing

--- a/frontend/src/components/Board/BuyParts/Bom.module.scss
+++ b/frontend/src/components/Board/BuyParts/Bom.module.scss
@@ -1,4 +1,5 @@
 .Bom {
+  margin-top: 50px;
   .expandBomTable:hover {
     background-color: #ededed !important;
     .expandSummary {
